# prakashsellathurai.github.io

./: .flycode.yaml  .gitignore  .gitmodules  404.html  404.md  418.html  418.md  419.md  CNAME  Gemfile  Makefile  README.md  _config.yml  bookshelf.html  bookshelf.md  bunfig.toml  contentlayer.config.ts  essays.html  essays.md  feed.xml  frontmatter.json  humans.md  humans.txt  index.html  index.md  next.config.js  package-lock.json  package.json  playwright.config.ts  projects.html  projects.md  pyproject.toml  redirects.json  resume.md  robots.txt  sitemap.xml  tailwind.config.mjs  tsconfig.json
_data/: goodreads.yml  repos.yml
_includes/: analytics.html  avatar.html  bookshelf.html  css.html  font.html  footer.html  head.html  nav.html  repo-card.html  repos.html  sidebar.html  style.html
_layouts/: default.html  post.html  projects_layout.html
_posts/: 2021-09-01-how-to-write-reaaaaaaaaaaaaly-looooooong-post.md  2021-09-17-welcome-to-jekyll.markdown  2021-10-06-right-kind-of-learning.md  2022-01-10-invisible-obvious.md  2022-01-10-invisible-obvious.md~
app/: Main.tsx  layout.tsx  metadata.ts  not-found.tsx  page.tsx  robots.ts  seo.tsx  sitemap.ts  tag-data.json  theme-providers.tsx
components/: BookCard.tsx  Card.tsx  Footer.tsx  Header.tsx  MDXComponents.tsx  MobileNav.tsx  PageTitle.tsx  ProjectsClient.tsx  SampleProjects.tsx  ScrollTopAndComment.tsx  SearchButton.tsx  SectionContainer.tsx  SideNote.tsx  Tag.tsx  ThemeSwitch.tsx  WabiSabiBackground.tsx  books.tsx  jsonLD.tsx
css/: prism.css  tailwind.css
data/: books.json  headerNavLinks.ts  (+4 more)
(+123 files in other folders)
