[project]
name = "prakashsellathurai-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "nbconvert[execute,serve,test,webpdf]>=7.17.1",
    "nbformat>=5.10.4",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-playwright>=0.6",
]
